# tUnit

./: .clang-format  CMakeLists.txt  Makefile  README.md  TODO:  basic_test  enhanced_test_runner.cpp  main.cpp  results.xml  test_results.xml
.cache/clangd/index/: all_predicates.h.674B32B268ECBFF3.idx  common_predicates_test.cpp.F983D4D5C80BA68B.idx  comparison_predicates.h.6F6360C04B71A287.idx  complex_predicates.h.6AA43D46FC485AAF.idx  complex_predicates_test.cpp.3A83F77C2DE34E5A.idx  container_predicates.h.B3DD179C16857F1D.idx  container_predicates_test.cpp.ADE259629F6AD035.idx  custom_predicates.h.05074459EFC53C3A.idx  evaluator.h.604866697C1F29FE.idx  evaluator_core_test.cpp.EF1C2418B7EE5554.idx  exception_tracing_test.cpp.D60D1B4FC54F1AB7.idx  integration_test.cpp.07A0F097804EA637.idx  logical_predicates.h.4FADA41D812F0418.idx  logical_predicates_test.cpp.B29801760F0EAA5D.idx  main.cpp.13186CC44C798697.idx  main.cpp.17F0A3F67E2911FF.idx  numeric_predicates.h.E14CC5590EB3FF33.idx  predicate_config.h.5CC5AA6C21B1A6C6.idx  range_predicates.h.7FFF431DF7BA7F67.idx  release_asserts.h.7FBB70E25B040BD8.idx  runner.cpp.481AB5245AF6CD0C.idx  runner.h.DDC0CEB62DB6DA57.idx  string_predicates.h.27A056ED419F2B58.idx  syntax_demo_test.cpp.AD981E3AC216FAB5.idx  trace_support.cpp.ED8083193D18F835.idx  trace_support.h.6A36A5B1311896E1.idx  tunit.h.1C91F576A05D4F15.idx
.github/workflows/: cmake.yml
include/: common_predicates.h  complex_predicates.h  container_predicates.h  evaluator.h  evaluator_all.h  logical_predicates.h  tUnit.h  test_runner.h  tunit.h
include/orchestrator/: assertion.h  orchestrator.h  suite.h  test.h
include/predicates/: all_predicates.h  basic_predicates.h  complex_predicates.h  container_predicates.h  custom_predicates.h  logical_predicates.h  numeric_predicates.h  predicate_config.h  range_predicates.h  string_predicates.h
include/predicates/collections/: container_predicates.h
include/predicates/common/: comparison_predicates.h  numeric_predicates.h  range_predicates.h  string_predicates.h
include/predicates/custom/: custom_predicates.h
include/predicates/stateful/: complex_predicates.h  logical_predicates.h
include/tUnit/: assertion.h  test_case.h  test_orchestrator.h  test_suite.h
include/test_runner/: test_runner.h  test_runner_utils.h  tunit_xml.h
include/utils/: colors.h  junit_xml.h  release_asserts.h  runner.h  test_runner.h  test_runner_utils.h  trace_support.h
src/: main.cpp
src/orchestrator/: orchestrator.cpp  suite.cpp  test.cpp
src/tUnit/: test_case.cpp  test_orchestrator.cpp  test_suite.cpp
src/test_runner/: colors.cpp  test_runner.cpp  test_runner_utils.cpp  tunit_xml.cpp
src/utils/: colors.cpp  junit_xml.cpp  runner.cpp  test_runner.cpp  test_runner_utils.cpp  trace_support.cpp  xml_parser.cpp
tests/: basic_test.cpp  common_predicates_test.cpp  common_predicates_test_new.cpp  complex_predicates_test.cpp  complex_predicates_test_new.cpp  container_predicates_test.cpp  container_predicates_test_new.cpp  debug_test.cpp  evaluator_core_test.cpp  exception_tracing_test.cpp  integration_test.cpp  integration_test_new.cpp  logical_predicates_test.cpp  logical_predicates_test_new.cpp  main.cpp  master_test_runner.cpp  master_test_runner_new.cpp  syntax_demo_test.cpp
